--- a/v2/styles/index.module.css
+++ b/v2/styles/index.module.css
@@ -32,13 +32,21 @@
   background-color: #fff;
   padding: 1.5rem;
   border-radius: 10px;
+  filter : opacity(.3);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  height : 100%;
 }
-.post:hover {
+
+.hovering .post:hover {
   transform: translateY(-2px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
 }
+
+.hovering .post {
+  filter : opacity(1);
+}
+
 .postTitle {
   display: flex;
   justify-content: space-between;
@@ -58,8 +66,9 @@
 }
 .postDescription {
   font-size: 0.9rem;
-  color: #666;
-  margin-bottom: 0.8rem;
+  color: #ccc;
+  margin-bottom: 0;
+  margin-top : .5em;
 }
 .readPostButton {
   color: var(--link-color);
@@ -133,6 +142,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  justify-self: flex-end;
 }
 .lockIcon {
   margin-left: 0.25rem;
@@ -143,7 +153,7 @@
 
 .summary {
   color : #888;
-  margin : .3em 0;
+  margin : .5em 0;
   font-size: .8em;
 }
 
